# OpengGLTriangleRenderer

./: .gitignore  README.md  settings.gradle
app/: build.gradle
app/src/androidTest/java/com/cci/glnativerender/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  opengl_renderer.cpp  opengl_triangle_render.cpp
app/src/main/java/com/cci/glnativerender/: GlTriangleRenderer.kt  MainActivity.kt  OpenGLRenderer.kt  SingleThreadHandlerExecutor.kt
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: strings.xml  themes.xml
app/src/main/res/values-night/: themes.xml
app/src/test/java/com/cci/glnativerender/: ExampleUnitTest.kt
gradle/wrapper/: gradle-wrapper.properties
